--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : rgba(114, 62, 27, 0.72);
+$secondary : rgba(255, 202, 0, 0.76);
+$accent    : #b08989;
 
-$dark      : #1D1D1D;
+$dark      : #1d1d1d;
 $dark-page : #121212;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive  : rgba(33, 186, 69, 0.59);
+$negative  : rgba(193, 0, 21, 0.57);
+$info      : rgba(49, 158, 236, 0.8);
+$warning   : rgba(242, 177, 55, 0.84);
