missions and objectives added

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : rgba(114, 62, 27, 0.72);
-$secondary : rgba(255, 202, 0, 0.76);
-$accent    : #b08989;
+$primary: rgba(114, 62, 27, 0.72);
+$secondary: #FFD6D6;
+$accent: rgba(82, 57, 0, 0.66);
 
 $dark      : #1d1d1d;
 $dark-page : #121212;
